<resources>
    <string name="app_name" translatable="false">Nouto</string>
    <string name="repository_link" translatable="false">https://github.com/HotarunIchijou/Nouto</string>
    <string name="telegram_link" translatable="false">https://t.me/KaorunIchijou"</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="notes_hint">Type your notes here</string>
    <string name="delete">Delete</string>
    <string name="add_note">Add note</string>
    <string name="searchbar_hint">Search</string>
    <string name="navigation_drawer_description">Navigation drawer</string>
    <string name="layout_switch_description">Switch layout</string>
    <string name="bold_style_description">Bold style</string>
    <string name="italic_style_description">Italic style</string>
    <string name="underline_style_description">Underline style</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="search_delete_button_description">Delete suggestion</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_summary">Application colors and theme modes</string>
    <string name="about">About</string>
    <string name="about_summary">About application</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System default</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="notes_empty">You don\'t have any notes yet</string>
    <string name="nothing_found">Nothing found in your notes</string>
    <string name="note_deleted_message">Note has been deleted</string>
    <string name="trash">Trash</string>
    <string name="there_are_no_deleted_notes">There are no deleted notes</string>
    <string name="delete_note_dialog_title">Delete note forever?</string>
    <string name="delete_note_dialog_message">The note will be permanently deleted and can\'t be recovered</string>
    <string name="undo">Undo</string>
    <string name="note_restored_message">Note has been restored</string>
    <string name="delete_notes_dialog_title">Delete all notes forever?</string>
    <string name="delete_notes_dialog_message">Notes will be permanently deleted and can\'t be recovered</string>
    <string name="type_to_start_search">Type to start search</string>
    <string name="restore_note_dialog_title">Restore note from trash?</string>
    <string name="restore_note_dialog_message">This item will be restored from trash</string>
    <string name="restore">Restore</string>
    <string name="theming">Theming</string>
    <string name="app_icon">App icon</string>
    <string name="the_best_app_for_taking_notes">The best app for taking notes</string>
    <string name="version">Version</string>
    <string name="source_code">Source code</string>
    <string name="source_code_summary">Project repository on GitHub</string>
    <string name="contact_developer">Contact developer</string>
    <string name="contact_developer_summary">Give feedback to developer via Telegram</string>
    <string name="language">Language</string>
    <string name="language_summary">Choose the language of application</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="dynamic_colors_summary">Colors based on your wallpaper</string>
    <string name="pure_black_theme">Pure black theme</string>
    <string name="pure_black_theme_summary">Make the app background black</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="note_pinned_message">Note has been pinned</string>
    <string name="note_unpinned_message">Note has been unpinned</string>
    <string name="open_menu">Open menu</string>
    <string name="dialog_keepandroidopen_title">Important information</string>
    <string name="dialog_keepandroidopen_warning">Google has announced that, starting in 2026/2027, all apps on certified Android devices will require the developer to submit personal identity details directly to Google. Since the developers of this app do not agree to this requirement, this app will no longer work on certified Android devices after that time.</string>
    <string name="dialog_keepandroidopen_more_info">More info</string>
    <string name="dialog_keepandroidopen_solution">Solution</string>
    <string name="dialog_keepandroidopen_solution_uri" translatable="false">https://github.com/woheller69/FreeDroidWarn?tab=readme-ov-file#solutions</string>
    <string name="dialog_keepandroidopen_uri" translatable="false">https://keepandroidopen.org"</string>
    <string name="backup_database">Backup application data</string>
    <string name="restore_application_data">Restore application data</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="backup_and_restore_summary">Backup and restore database, note entries</string>
    <string name="backup_database_success">Database backup completed successfully</string>
    <string name="restart_app">App restart is required</string>
    <string name="restart_app_summary">Restart the application to apply backup</string>
    <string name="restart">Restart</string>
    <string name="restore_database_success">App database restored successfully</string>
    <string name="error_occured">An error occurred</string>
    <string name="backup_database_summary">Make a local backup of notes</string>
    <string name="restore_database_summary">Restore notes from your local backup</string>
    <string name="export">Export</string>
    <string name="export_success">Note has been exported successfully</string>
    <string name="application_data">Application data</string>
    <string name="note_entries">Note entries</string>
    <string name="export_note">Export note</string>
    <string name="export_note_summary">Export a single note onto your device</string>
    <string name="import_note">Import note</string>
    <string name="import_note_summary">Import note from your device</string>
    <string name="back">Back</string>
    <string name="import_button">Import</string>
    <string name="empty_title">Empty title</string>
    <string name="empty_content">Empty content</string>
    <string name="note_imported_message">Note has been imported successfully</string>
    <string name="backup_restore_description">Backup and restore your notes. All backups are stored locally on your device</string>
    <string name="note_editor">Note editor</string>
    <string name="edit_note">Edit note</string>
    <string name="show_keyboard">Show keyboard</string>
    <string name="show_keyboard_summary">Automatically show keyboard when opening note</string>
    <string name="view_only_mode">View only mode</string>
    <string name="view_only_mode_summary">Open existing note in view only mode</string>
    <string name="system_default">System default</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="focus_on_content">Focus on content</string>
    <string name="focus_on_content_summary">Automatically focus keyboard on content instead of title</string>
    <string name="show_title">Show title</string>
    <string name="show_title_summary">Show title in note editor</string>
    <string name="library">Library</string>
    <string name="add">Add</string>
    <string name="rename">Rename</string>
    <string name="move">Move</string>
    <string name="move_to_folder">Move to folder</string>
    <string name="new_folder">New folder</string>
    <string name="create_folder">Create folder</string>
    <string name="create_note">Create note</string>
    <string name="create">Create</string>
    <string name="folder_name_hint">Folder name</string>
    <string name="display_name_hint">Display name</string>
    <string name="add_link">Add link</string>
    <string name="link_url_hint">URL</string>
    <string name="link_name_optional_hint">Display name (optional)</string>
    <string name="import_files">Import files</string>
    <string name="library_root">Library (Root)</string>
    <string name="delete_folder_dialog_title">Delete folder?</string>
    <string name="delete_folder_dialog_message">Folder \"%1$s\" and all its contents will be permanently deleted</string>
    <string name="delete_resource_dialog_title">Delete resource?</string>
    <string name="delete_resource_dialog_message">Resource \"%1$s\" will be removed from Nouto</string>
    <string name="folder_deleted_message">Folder has been deleted</string>
    <string name="resource_deleted_message">Resource has been deleted</string>
    <string name="file_imported_message">File imported successfully</string>
    <string name="files_imported_message">%1$d files imported successfully</string>
    <string name="library_empty">No resources or folders yet</string>
    <string name="add_to_library">Add to Nouto Library</string>
    <string name="select_destination_folder">Select destination folder</string>
    <string name="files_count">%1$d files selected</string>
    <string name="no_app_to_open_resource">No application found to open this resource</string>
    <string name="resource_access_error">Unable to access file with current permissions</string>
</resources>