<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/theming">

        <org.kaorun.nouto.ui.components.MaterialListPreference
            android:key="theme"
            android:icon="@drawable/brightness_6_24px"
            android:title="@string/theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            app:useSimpleSummaryProvider="true" />

        <org.kaorun.nouto.ui.components.MaterialSwitchPreferenceCompat
            android:key="black_theme"
            android:icon="@drawable/contrast_24px"
            android:title="@string/pure_black_theme"
            android:summary="@string/pure_black_theme_summary"
            android:defaultValue="false" />

        <org.kaorun.nouto.ui.components.MaterialSwitchPreferenceCompat
            android:key="dynamic_colors"
            android:icon="@drawable/colors_24px"
            android:title="@string/dynamic_colors"
            android:summary="@string/dynamic_colors_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/note_editor">

        <org.kaorun.nouto.ui.components.MaterialSwitchPreferenceCompat
            android:key="view_only_mode"
            android:icon="@drawable/visibility_24px"
            android:title="@string/view_only_mode"
            android:summary="@string/view_only_mode_summary"
            android:defaultValue="false" />

        <org.kaorun.nouto.ui.components.MaterialSwitchPreferenceCompat
            android:key="show_title"
            android:icon="@drawable/title_24px"
            android:title="@string/show_title"
            android:summary="@string/show_title_summary"
            android:defaultValue="true" />

        <org.kaorun.nouto.ui.components.MaterialSwitchPreferenceCompat
            android:key="show_keyboard"
            android:icon="@drawable/keyboard_alt_24px"
            android:title="@string/show_keyboard"
            android:summary="@string/show_keyboard_summary"
            android:defaultValue="true" />

        <org.kaorun.nouto.ui.components.MaterialSwitchPreferenceCompat
            android:key="focus_on_content"
            android:icon="@drawable/notes_24px"
            android:title="@string/focus_on_content"
            android:summary="@string/focus_on_content_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>